--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -2,6 +2,11 @@
 @import "partials/base";
 
 // Partials
+@import "partials/typography";
 @import "partials/buttons";
-
+@import "partials/sprite";
+@import "partials/icons";
+@import "partials/sections-mainpage";
 // Vendor
+
+@import "vendor/bootstrap";
