--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -1,4 +1,14 @@
 doctype
 html
   include includes/_head
+  include includes/mixins
   body
+    include includes/section-mainpage/_teasers-service
+    include includes/section-mainpage/_features
+    include includes/section-mainpage/_trigger
+    include includes/section-mainpage/_news
+    include includes/section-mainpage/_teasers-statistic
+    section.about-company
+      .row
+        .col-md-6 ffff
+        .col-md-6 ffff
